[package]
name = "container-rack-lib"
description = "Simple cli tool and library for generating storage shelfs for Smartstore containers" 
version = "0.3.3"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cli = ["dep:clap", "dep:comfy-table"]
default = ["cli"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"], optional = true  }
comfy-table ={ version =  "7.2.2" , optional = true }
svg = "0.18.0"
url = "2.5.8"

[lib]
name = "container_rack_lib"
path = "src/lib.rs"
